<resources>
    <string name="app_name">Electrack</string>
    <string name="action_settings">Settings</string>


    <string name="hello_world">Hello world!</string>

    <string name="btn_json">Json Request</string>
    <string name="btn_string">String Request</string>
    <string name="btn_image">Image Request</string>

    <string name="btn_json_obj_request">Json Object Request</string>
    <string name="btn_json_array_request">Json Array Request</string>

    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>

    <string name="nav_item_Current_Stats">Current Statistics</string>
    <string name="nav_item_Usage">Usage History</string>
    <string name="nav_item_Predictor">Unit Predictor</string>
    <string name="nav_item_Payment">Payment Due</string>
    <string name="nav_item_Support">Support</string>

    <string name="title_home">Current Statistics</string>
    <string name="Sign_in">Sign in</string>
    <string name="Success">Success</string>
    <string name="Loading">Loading...</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="a_7_sector_41_nnoida">A-7 Sector-41\nNoida</string>

    <string name="gcm_defaultSenderId1">631863682702</string>
    <string name="rupee">₹</string>


    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_Current_Stats</item>
        <item>@string/nav_item_Usage</item>
        <item>@string/nav_item_Predictor</item>
        <item>@string/nav_item_Payment</item>
        <item>@string/nav_item_Support</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="action_logout">Logout</string>

</resources>
